vbnc/vbnc/vbnc/tests/Errors/30060-16.vb
Class T
    Const M_String As String = 2UI
End Class